--- a/client/not-found.html
+++ b/client/not-found.html
@@ -2,23 +2,16 @@
 <html>
 <head>
 	<style>
-		body {
-			background-image: linear-gradient(to bottom, black , #1122AA);
-		}
-		h1, h2{
-			color: #22AA11;
-			text-align: center;
-		}
         h1{
             font-size: 50px;
         }
         div{
-            height: 630px;
             width: 100%;
         }
 	</style>
 	<meta charset="utf-8" />
 	<title>Ball Shot</title>
+	<link rel="stylesheet" href="style.css" />
 	<link href="images/night.png" rel="icon" />
 </head>
 <body>
