fix: mobile controls

--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,10 @@
 		<canvas id="canvas" width="512" height="512"/>
 	</div>
 	<div id="mobile-controls" class="mobile-controls">
-		<button id="left-button">&lt;</button>
-		<button id="right-button">></button>
+		<div class="mobile-move-controls">
+			<button id="left-button">&lt;</button>
+			<button id="right-button">></button>
+		</div>
 		<button id="fire-button">Fire</button>
 	</div>
 	<div id="pc-instructions">
